# Gaussian_integrals

./: .gitignore  .gitmodules  CMakeLists.txt
input/: benchmark.values  inp.heman  inp.heman.n2.small  inpsmall.txt  inpsmallN2.txt  out.heman  out.heman.n2.small
math_library/: CMakeLists.txt  clebsch_gordan.f  clebsh_gordan.f90  conversions.f90  factorials.f90  integral_3_real_sphH.f90  lebedev_quadrature.f90  lmindx_map.f90  matrix_operations.f90  special_functions.f90  sphericalHarmonics.f90
math_library/tests/: CMakeLists.txt  test_boys.f90  test_integral_3rspH.f90  test_lebedev.f90  test_matrix_operations.f90  test_sphHY.f90
src/: CMakeLists.txt  Gaussian_Overlap.f90  Gaussian_expansion_coeff_Ylm.f90  Gaussian_type.f90  atom_type.f90  boys_function.f90  constants.f90  contracted_Gaussian_type.f90  electron_repulsion_integral.f90  kinetic_integral.f90  molden_parser.f90  nuclear_attraction_integral.f90  precision.f90
tests/: CMakeLists.txt  reader_mod.f90  test_Gauss_expansion.f90  test_Gaussian_overlap.f90  test_boys.f90  test_clebsh_gordan_coef.f90  test_primitivesN2.f90  test_simpleH2.f90
utility_library/: CMakeLists.txt  constants.f90  string_array_mod.f90
